# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "dblpolicy_omni"
version = "1.3.0"
rust-version = "1.87.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "acda9d4d-1bfb-4b44-9b48-6f8f49157bbd"
definition_asset_id = "dblpolicy-omni"
implementation_asset_id = "dblpolicy-omni-flex"

[dependencies]
pdk = { version = "1.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.6.0" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
